Settings: Spoof current storage encryption status [2/3] * Use props to check it
Change-Id: I58d1fe2242d28ca64dbb1a87f979a96ab9b9e236

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -322,4 +322,7 @@
     <string name="storage_scopes_summary">Allow app to access limited files</string>
     <string name="contact_scopes">Contact Scopes</string>
     <string name="contact_scopes_summary">Allow app to access limited contacts</string>
+
+    <!-- Encryption -->
+    <string name="encrypted_summary_not_supported">Not supported</string>
 </resources>
