--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -25,6 +25,7 @@
     <string name="category_name_status_bar_display">Status bar</string>
     <string name="status_bar_system_icons_title">Status bar icons</string>
     <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
+    <string name="keywords_status_bar_icons">auto-rotate, screen, headset, firewall, work, profile, cast, hotspot, bluetooth, do not disturb, dnd, mute, vibrate, wi-fi, calling, ethernet, mobile, data, volte, roaming, network traffic, vpn, saver, airplane, alarm, battery, time, notification</string>
 
     <!-- Quick pulldown -->
     <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
