--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -63,7 +63,8 @@
         <Preference
             android:key="status_bar_icons"
             android:title="@string/status_bar_system_icons_title"
-            android:summary="@string/status_bar_system_icons_summary">
+            android:summary="@string/status_bar_system_icons_summary"
+            settings:keywords="@string/keywords_status_bar_icons">
             <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
         </Preference>
     </PreferenceCategory>
